# sp1-storage-proof

./: .env.example  Cargo.toml  README.md
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs  proof.rs
program/: Cargo.toml
program/src/: main.rs  proof.rs
script/: Cargo.toml
